# cursor-transcribe

./: .gitignore  README.md  output.json  package-lock.json  package.json  pyproject.toml  pytest_html_report.html  requirements-test.txt  requirements.txt  setup.py
docs/: API.md  test-plan.md
docs/technical/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
frontend/: package-lock.json  package.json  watch-page.js
frontend/src/app/: Providers.tsx  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  ExportControls.test.tsx  ExportControls.tsx  FileUpload.test.tsx  FileUpload.tsx  Footer.tsx  LanguageSelector.test.tsx  LanguageSelector.tsx  LoadingOverlay.test.tsx  LoadingOverlay.tsx  LoadingSpinner.test.tsx  LoadingSpinner.tsx  MobileMenu.tsx  Navigation.tsx  Notification.test.tsx  Notification.tsx  ProcessingProgress.test.tsx  ProcessingProgress.tsx  SummaryDisplay.test.tsx  SummaryDisplay.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx  TranscriptionDisplay.test.tsx  TranscriptionDisplay.tsx
frontend/src/contexts/: NotificationContext.test.tsx  NotificationContext.tsx  SettingsContext.test.tsx  SettingsContext.tsx  ThemeContext.test.tsx  ThemeContext.tsx
frontend/src/types/: env.d.ts
frontend/tests/assets/: NPR_Transcript.txt
frontend/tests/e2e/: audio-transcription.test.js  page-state.test.js  print-dom.test.js
rules/: generate-tasks.mdc  process-task-list.mdc
scripts/: test-cross-browser.js
src/: __init__.py
src/app/: main.py
src/tests/: conftest.py  requirements-test.txt  run_tests.py  test_main.py
(+31 files in other folders)
